Fixed issues with flex-wrap and styled quote

--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ body {
     justify-content: center;
     text-align: center;
     gap: 80px;
+    flex-wrap: wrap;
 }
 .info {
     display: flex;
@@ -96,10 +97,33 @@ body {
     border-radius: 16px; 
     width: 180px;
     height: 180px;
+    object-fit: cover;
 }
 .text {
     max-width: 200px;
     text-align: center;
     font-size: 18px;
     color: #313131;
+}
+
+.quote-box {
+    padding: 180px;
+    background-color: #E5E7EB;
+    font-size: 36px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.quote {
+    max-width: 950px;
+    font-style: italic;
+}
+
+.quotee {
+    text-align: right;
+    font-weight: bold;
+    font-size: 24px;
+    padding-left: 200px;
 }
